crates/formatter/tests/snapshots/snapshots__synapse__main__delta__46__drop_unique_deleted_pushers.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
--
-- This file is licensed under the Affero General Public License (AGPL) version 3.
--
-- Copyright (C) 2023 New Vector, Ltd
--
-- This program is free software: you can redistribute it and/or modify
-- it under the terms of the GNU Affero General Public License as
-- published by the Free Software Foundation, either version 3 of the
-- License, or (at your option) any later version.
--
-- See the GNU Affero General Public License for more details:
-- <https://www.gnu.org/licenses/agpl-3.0.html>.
--
-- Originally licensed under the Apache License, Version 2.0:
-- <http://www.apache.org/licenses/LICENSE-2.0>.
--
-- [This file includes modifications made by New Vector Limited]
--
--
/* Copyright 2017 New Vector Ltd
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- drop the unique constraint on deleted_pushers so that we can just insert
-- into it rather than upserting.

create table deleted_pushers2 (
	stream_id bigint not null,
	app_id text not null,
	pushkey text not null,
	user_id text not null
);

insert into deleted_pushers2 (stream_id, app_id, pushkey, user_id)
select stream_id, app_id, pushkey, user_id
from deleted_pushers;

drop table deleted_pushers;
alter table deleted_pushers2 rename to deleted_pushers;

-- create the index after doing the inserts because that's more efficient.
-- it also means we can give it the same name as the old one without renaming.
create index deleted_pushers_stream_id on deleted_pushers (stream_id);
